--- a/dropshop-frontend/src/App.css
+++ b/dropshop-frontend/src/App.css
@@ -58,8 +58,8 @@
     display: flex;
     flex-direction: column;
 }
-.product-button:not(:active) {
-    background-color: #D1E751;
+.product-button:hover {
+    background-image: linear-gradient(50deg, #d4fc79 0%, #96e6a1 100%);
 }
 
 .cart-container {
