--- a/dropshop-frontend/src/product.css
+++ b/dropshop-frontend/src/product.css
@@ -107,7 +107,7 @@ a
     height: 50px;
     border-radius: 10px;
     width: 100%;
-    background-color: rgba(209, 231, 81, 0.53);
+    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
     font-family: Montserrat, serif;
 }
 
